--- a/package.json
+++ b/package.json
@@ -15,12 +15,20 @@
     "url": "https://github.com/nickverstocken"
   },
   "zeplin": {
-    "displayName": "react-styled-components",
+    "displayName": "React Styled Component",
     "projectTypes": [
       "web"
     ]
   },
   "dependencies": {
     "zem": "^0.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "^1.14.3"
   }
 }
