--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "0.1.0",
   "description": "Zeppeling extension that generates styled components",
   "scripts": {
-    "start": "zem start",
-    "build": "zem build",
+    "start": "webpack --config ./config/webpack.dev.js --progress --color",
+    "build": "webpack --config ./config/webpack.prod.js",
     "clean": "zem clean",
     "exec": "zem exec",
     "publish": "zem publish"
   },
-  "author": {
-    "name": "Nick Verstocken",
-    "email": "nick.verstocken@novemberfive.co",
-    "url": "https://github.com/nickverstocken"
-  },
+  "main": "index.js",
   "zeplin": {
     "displayName": "React Styled Component",
     "projectTypes": [
@@ -21,14 +17,33 @@
     ]
   },
   "dependencies": {
+    "humps": "^2.0.1",
     "zem": "^0.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.1.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "prettier": "^1.14.3"
+    "flow-bin": "^0.85.0",
+    "prettier": "^1.14.3",
+    "react-dev-utils": "^6.1.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.1.4"
   }
 }
