change web page to novemberfive

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "author": {
     "name": "Nick Verstocken",
     "email": "nick.verstocken@novemberfive.co",
-    "url": "https://github.com/nickverstocken"
+    "url": "https://novemberfive.co"
   },
   "repository": "https://github.com/novemberfiveco/zeplin-styled-components.git",
   "options": [
