--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeplin-styled-components",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A Zeplin extension that generates Styled Component snippets from colors, text styles and layers.",
   "scripts": {
     "start": "webpack --config ./config/webpack.dev.js --progress --color",
@@ -16,12 +16,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-flow": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "clean-webpack-plugin": "^0.1.19",
